--- a/index.html
+++ b/index.html
@@ -52,62 +52,74 @@
         <div class="card">
             <img src="images/players/player-1.png" alt="">
             <h1>Neymar Jr</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-2.png" alt="">
             <h1>Lionel Messi</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-3.png" alt="">
             <h1>Cristiano Ronaldo</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-4.png" alt="">
             <h1>Paulo Dybala</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-5.png" alt="">
             <h1>Mesut Ozil</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-6.png" alt="">
             <h1>Mauro Icardi</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-7.png" alt="">
             <h1>Di Maria</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-8.png" alt="">
             <h1>Kylian Mbappé</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-9.png" alt="">
             <h1>Mohamed Salah</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-10.png" alt="">
             <h1>Harry Kane</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-11.png" alt="">
             <h1>Kevin De Bruyne</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
         <div class="card">
             <img src="images/players/player-12.png">
             <h1>Philippe Coutinho</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p>Play by the rules.
+Never argue with an official. If you disagree, have your captain approach the official during a break or after the competition.</p>
         </div>
     </section>
 
